I started making the Art Gallery index, replacing the logo and header images with Ray Leung's Night Land site intro. I rotated the page background image to make it match better with Mr. Leung's illo, but there's some visible discontinuity and I need to fix that.
Renamed the dark backgrounds to fabian--etc* because they turn out to be taken from a Fabian Watcher pic.

--- a/css/last-redoubt-red.scss
+++ b/css/last-redoubt-red.scss
@@ -9,7 +9,7 @@
     doesn't have a color and fix it. */
 html {
     background-color: $opaque-black;
-    background-image: url('../media/images/backgrounds/robertson--night-background-darker.jpg');
+    background-image: url('../media/images/backgrounds/fabian--night-background-darker.jpg');
     background-repeat: repeat;
     font-family: $body-font;
     color: magenta;
